# game-template-2D

./: CMakeLists.txt  README.md
include/: Window.hpp
src/: Window.cpp  main.cpp
